--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,7 @@
 site_name: SwarmNXT
+repo_url: https://github.com/lis-epfl/swarm-nxt
+repo_name: GitHub
+edit_uri: edit/main/docs/
 nav: 
   - Home: index.md
   - Infrastructure Setup: infra-setup.md
