update readme + vnc password

--- a/ansible/drone_setup.yml
+++ b/ansible/drone_setup.yml
@@ -100,7 +100,7 @@
 
             # shell to allow for this evaluation 
           - name: "Set password"
-            ansible.builtin.shell: gsettings set org.gnome.Vino vnc-password $(echo -n 'thepassword'|base64)  # TODO: actual password? 
+            ansible.builtin.shell: gsettings set org.gnome.Vino vnc-password $(echo -n 'orin'|base64)  # TODO: actual password? 
 
       - name: "xorg configuration"
         ansible.builtin.blockinfile:
