--- a/ansible/tasks/patch-kernel.yml
+++ b/ansible/tasks/patch-kernel.yml
@@ -13,7 +13,7 @@
         checksum_algorithm: sha256
         get_checksum: yes
       register: patched_kernel_file
-      delegate_to: 127.0.0.1
+      delegate_to: localhost
       become: no
     - name: Send and extract patched kernel if it does exist
       when: patched_kernel_file.stat.exists and patched_kernel_file.stat.checksum == '54d7125a049bebc9393aa4af2a842c8584ebd683e6b89330ee8e6bfdcffc0dfc'
