add a reboot at the end of the drone setup for the hostname to take effect

--- a/ansible/drone_setup.yml
+++ b/ansible/drone_setup.yml
@@ -232,3 +232,8 @@
         psk: "{{ wifi_password }}"
       autoconnect: true
       state: present
+
+  - name: Reboot system and wait for it to come back
+    ansible.builtin.reboot:
+      reboot_timeout: 600        
+      test_command: whoami
