controller: make custom command message

--- a/ros_packages/swarmnxt_controller_ros2/CMakeLists.txt
+++ b/ros_packages/swarmnxt_controller_ros2/CMakeLists.txt
@@ -16,6 +16,8 @@ find_package(sensor_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(mavros_msgs REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 
 set(DEPENDENCIES
   rclcpp
@@ -26,7 +28,15 @@ set(DEPENDENCIES
   nav_msgs 
   mavros_msgs 
   tf2_geometry_msgs
+  std_msgs
 )
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+                          "msg/ControllerCommand.msg"
+                          DEPENDENCIES std_msgs geometry_msgs mavros_msgs                          
+)
+
+ament_export_dependencies(rosidl_default_runtime)
 
 include_directories(
   include/swarmnxt_controller_ros2
@@ -55,6 +65,10 @@ install(TARGETS
 install(TARGETS
 swarmnxt_controller_node
 DESTINATION lib/${PROJECT_NAME}
+)
+
+target_link_libraries(swarmnxt_controller_class
+  ${PROJECT_NAME}__rosidl_typesupport_cpp
 )
 
 if(BUILD_TESTING)
