wip: safety rearchitecture

--- a/ros_packages/safety_checker_ros2/CMakeLists.txt
+++ b/ros_packages/safety_checker_ros2/CMakeLists.txt
@@ -11,9 +11,11 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
+find_package(mavros_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 find_package(nlohmann_json REQUIRED)
 find_package(std_srvs REQUIRED)
+find_package(swarmnxt_controller_ros2 REQUIRED)
 
 
 set(DEPENDENCIES
@@ -22,8 +24,10 @@ set(DEPENDENCIES
   geometry_msgs
   std_srvs
   nav_msgs
+  mavros_msgs
   rosidl_default_generators
   nlohmann_json
+  swarmnxt_controller_ros2 
 )
 
 include_directories(
