--- a/ros_packages/safety_checker_ros2/package.xml
+++ b/ros_packages/safety_checker_ros2/package.xml
@@ -6,11 +6,11 @@
   <description>TODO: Package description</description>
   <maintainer email="niel.mistry@epfl.ch">root</maintainer>
   <license>TODO: License declaration</license>
-  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>nlohmann-json-dev</depend>
   <depend>swarmnxt_controller_ros2</depend>
+  <depend>swarmnxt_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
