drone state manager

--- a/ros_packages/safety_checker_ros2/CMakeLists.txt
+++ b/ros_packages/safety_checker_ros2/CMakeLists.txt
@@ -44,7 +44,8 @@ ament_target_dependencies(safety_checker_class
 )
 
 ament_target_dependencies(safety_checker_node
-${DEPENDENCIES})
+  ${DEPENDENCIES}
+)
 
 
 install(DIRECTORY
