--- a/ros_packages/drone_state_manager_ros2/setup.cfg
+++ b/ros_packages/drone_state_manager_ros2/setup.cfg
@@ -11,6 +11,7 @@ packages = find:
 install_requires =
     rclpy
     std_msgs
+    swarmnxt_msgs
 
 [options.packages.find]
 where = drone_state_manager_ros2
