--- a/ansible/drone_setup.yml
+++ b/ansible/drone_setup.yml
@@ -163,6 +163,7 @@
                 - ros-dev-tools
                 - ros-humble-mavros
                 - ros-humble-mavros-extras
+                - ros-humble-rosbag2-storage-mcap
               update_cache: true
               state: latest
 
