--- a/ansible/drones_preflight.yml
+++ b/ansible/drones_preflight.yml
@@ -43,7 +43,7 @@
 
     - name: Send launch file
       ansible.builtin.template:
-        src: templates/drone_launch.yaml.j2
+        src: templates/drone_launch.py.j2
         dest: "{{ drone_base_path }}/launch.py"
 
     - name: Send 3D Bounds file
