--- a/ansible/drone_setup.yml
+++ b/ansible/drone_setup.yml
@@ -172,7 +172,7 @@
               path: /home/lis/.bashrc
               block: |
                 source /opt/ros/humble/setup.bash
-                export ROS_DOMAIN_ID={{ ros_domain_id }} 
+                export ROS_DOMAIN_ID={{ drone_num }} 
 
           - name: Get geoids
             ansible.builtin.shell: geographiclib-get-geoids all
