--- a/ansible/drones_preflight.yml
+++ b/ansible/drones_preflight.yml
@@ -101,6 +101,12 @@
         mode: "644"
       vars:
         peers: "{{ groups['drones'] | map('regex_replace', '\\.local$', '') | join('\n') }}"
+    
+    - name: Send bridge configuration 
+      ansible.builtin.template: 
+        src: templates/drone_brige_config.yaml.j2
+        dest: "{{ drone_ros_path }}/config/bridge_config.yaml.j2"
+        mode: "644"
 
     - name: Send launch file
       ansible.builtin.template:
