--- a/ansible/host_computer.yml
+++ b/ansible/host_computer.yml
@@ -49,13 +49,12 @@
               ansible.builtin.apt_repository:
                 repo: "deb [arch={{ deb_arch.stdout }} signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu {{ ansible_distribution_release }} main"
                 state: present
+            - name: Download base ROS 
+              ansible.builtin.include_tasks: "tasks/download-ros.yml"
             - name: Download ROS
               ansible.builtin.apt:
                 name: 
                   - ros-humble-desktop
-                  - ros-dev-tools
-                  - ros-humble-mavros
-                  - ros-humble-mavros-extras
                   - ros-humble-plotjuggler
                 update_cache: true
                 state: latest   
@@ -66,7 +65,7 @@
       ansible.builtin.blockinfile: 
         path: ~/.bashrc
         block: |
-          export ROS_DOMAIN_ID={{ ros_domain_id }}
+          export ROS_DOMAIN_ID={{ drone_num }}
     - name: VNC Viewer
       become: yes
       ansible.builtin.apt:
