--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,3 +6,6 @@ RUN cd /repos/PX4-Autopilot && \
     ./Tools/setup/ubuntu.sh && \
      make px4_sitl && \
     rm -rf /var/lib/apt/lists/*
+LABEL org.opencontainers.image.source=https://github.com/lis-epfl/swarm-nxt
+LABEL org.opencontainers.image.description="SwarmNXT Github Dev Image"
+LABEL org.opencontainers.image.licenses=MIT
