wip: drone docker

--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -3,6 +3,15 @@ nxt1.local
 nxt2.local
 ; nxt3.local
 
+[sim_drones]
+nxt1
+
+
+[sim_drones:vars]
+ansible_connection=community.docker.docker
+ansible_python_interpreter=python3
+remote_tmp = /tmp/.ansible-${USER}/tmp
+
 [local_drone]
 192.168.55.1 
 
