--- a/ansible/drones_update.yml
+++ b/ansible/drones_update.yml
@@ -41,6 +41,7 @@
           ansible.builtin.git: 
               repo: https://github.com/lis-epfl/swarm-nxt
               dest: "{{ drone_base_path }}/repos/swarm-nxt"
+              version: devel
               force: yes
           
         - name: List ros_packages directories
