--- a/ros_packages/swarmnxt_msgs/CMakeLists.txt
+++ b/ros_packages/swarmnxt_msgs/CMakeLists.txt
@@ -4,15 +4,18 @@ project(swarmnxt_msgs)
 # Find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
+find_package(builtin_interfaces REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(mavros_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 
 set(DEPENDENCIES
+  builtin_interfaces
+  std_msgs
   geometry_msgs
   mavros_msgs 
-  std_msgs
 )
+
 # Generate messages
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Plane.msg"
