--- a/ros_packages/swarmnxt_msgs/package.xml
+++ b/ros_packages/swarmnxt_msgs/package.xml
@@ -9,8 +9,15 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   <build_depend>rosidl_default_generators</build_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
+  <depend>builtin_interfaces</depend>
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>mavros_msgs</depend>
   
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-  
+
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
