--- a/.github/workflows/check_docs.yaml
+++ b/.github/workflows/check_docs.yaml
@@ -2,6 +2,11 @@ name: Build Docs
 
 on:
     push:
+        branches:
+            - main
+            - devel
+        tags:
+            - 'v*'
         paths:
             - 'docs/**'
             - 'mkdocs.yml'
@@ -38,27 +43,39 @@ jobs:
               retention-days: 1
     
     deploy:
-        if: github.ref_name == 'main'
+        if: github.event_name == 'push' && (github.ref_name == 'main' || github.ref_name == 'devel' || startsWith(github.ref, 'refs/tags/v'))
         runs-on: ubuntu-latest
         needs: build-docs
-        permissions:
-          pages: write
-          id-token: write
-        environment: 
-          name: github-pages
-          url: ${{ steps.deployment.outputs.page_url }}
         steps:
-          - name: Get website
-            uses: actions/download-artifact@v4 
-            with: 
-              name: website
-          - name: Setup pages
-            uses: actions/configure-pages@v5
-          - name: Upload Artifact
-            uses: actions/upload-pages-artifact@v3
-            with: 
-              path: '.'
-          - name: Deploy
-            id: deployment
-            uses: actions/deploy-pages@v4
+          - name: Checkout repository
+            uses: actions/checkout@v4
+            with:
+              fetch-depth: 0
+
+          - name: Set up Python
+            uses: actions/setup-python@v5
+            with:
+                python-version: '3.x'
+
+          - name: Install dependencies
+            run: |
+                pip install -r requirements.txt
+
+          - name: Configure Git
+            run: |
+                git config --global user.name 'github-actions[bot]'
+                git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+
+          - name: Deploy documentation with mike
+            run: |
+              # Determine version based on branch/tag
+              if [[ "${{ github.ref_name }}" == "main" ]]; then
+                mike deploy --push --update-aliases latest main
+                mike set-default --push latest
+              elif [[ "${{ github.ref_name }}" == "devel" ]]; then
+                mike deploy --push --update-aliases devel
+              elif [[ "${{ github.ref }}" == refs/tags/v* ]]; then
+                TAG_NAME="${{ github.ref_name }}"
+                mike deploy --push --update-aliases "$TAG_NAME"
+              fi
 
