fix host computer stuff

--- a/ansible/drones_preflight.yml
+++ b/ansible/drones_preflight.yml
@@ -10,7 +10,7 @@
       connection: local
       block:
       - name: Build local packages
-        ansible.builtin.shell: ". /opt/ros/humble/setup.sh && colcon build --symlink-install"
+        ansible.builtin.shell: ". /opt/ros/humble/setup.sh && colcon build"
         args:
           chdir: "{{ host_ros_path }}"
 
