--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,16 +1,11 @@
 [drones]
-nxt1.local
-nxt2.local
-; nxt3.local
+;nxt1.local
+;nxt2.local
+;nxt3.local
+nxt4.local 
 
-[sim_drones]
-nxt1
-
-
-[sim_drones:vars]
-ansible_connection=community.docker.docker
-ansible_python_interpreter=python3
-remote_tmp = /tmp/.ansible-${USER}/tmp
+[drones:vars]
+ansible_become_password=orin
 
 [local_drone]
 192.168.55.1 
