--- a/ansible/tasks/setup-common.yml
+++ b/ansible/tasks/setup-common.yml
@@ -6,7 +6,9 @@
 - name: Ensure apt packages are installed
   ansible.builtin.apt: 
     name: 
-      - python3-pip 
+      - python3-pip
+      - python3-loguru 
+      - python3-yaml
       - htop 
       - sysstat
       - chrony
