--- a/ansible/drones_preflight.yml
+++ b/ansible/drones_preflight.yml
@@ -100,24 +100,28 @@
         state: directory
         mode: "755"
     
-    - name: Send peer list
-      ansible.builtin.template: 
-        src: templates/peer_list.yaml.j2
-        dest: "{{ drone_ros_path }}/config/peer_list.yaml"
+    - name: Create local services dir
+      ansible.builtin.file: 
+        dest: ~/.local/share/systemd/user
+        state: directory
+    
+    - name: Send files
+      ansible.builtin.template:
+        src: "{{ item.src }}"
+        dest: "{{ item.dest }}"
         mode: "644"
+      loop:
+        - { src: "templates/peer_list.yaml.j2", dest: "{{ drone_ros_path }}/config/peer_list.yaml" }
+        - { src: "templates/drone_bridge_config.yaml.j2", dest: "{{ drone_ros_path }}/config/bridge_config.yaml" }
+        - { src: "templates/mcap_bag_options.yml", dest: "{{ drone_ros_path }}/config/mcap_bag_options.yml"}
+        - { src: "templates/bounds.json", dest: "{{ drone_ros_path }}/config/bounds.json"}
+        - { src: "templates/drone_launch.py.j2", dest: "{{ drone_base_path }}/launch.py"}
+        - { src: "templates/ros_packages_service.j2", dest: "~/.local/share/systemd/user/ros_packages.service"}
       vars:
         peers: "{{ groups['drones'] | map('regex_replace', '\\.local$', '') | join('\n') }}"
-    
-    - name: Send bridge configuration 
-      ansible.builtin.template: 
-        src: templates/drone_bridge_config.yaml.j2
-        dest: "{{ drone_ros_path }}/config/bridge_config.yaml"
-        mode: "644"
-
-    - name: Send launch file
-      ansible.builtin.template:
-        src: templates/drone_launch.py.j2
-        dest: "{{ drone_base_path }}/launch.py"
+        ros_path: "{{ drone_ros_path }}"
+        base_path: "{{ drone_base_path }}"
+        
 
     - name: Send 3D Bounds file
       ansible.builtin.copy:
@@ -134,18 +138,6 @@
         dest: "{{ drone_base_path }}/ros_packages_start.sh"
         mode: "755"
       
-    - name: Create local services dir
-      ansible.builtin.file: 
-        dest: ~/.local/share/systemd/user
-        state: directory
-    
-    - name: Install ros_packages service 
-      vars:
-        base_path: "{{ drone_base_path }}"
-      ansible.builtin.template: 
-        src: templates/ros_packages_service.j2
-        dest: ~/.local/share/systemd/user/ros_packages.service
-
     - name: Start ros_packages service
       ansible.builtin.systemd: 
         name: ros_packages
