--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -2,10 +2,22 @@
 ;nxt1.local
 ;nxt2.local
 ;nxt3.local
-nxt4.local 
-
+;nxt4.local
+;nxt5.local
+;nxt6.local 
+nxt7.local
+nxt8.local
 [drones:vars]
 ansible_become_password=orin
+
+
+[sim_drones]
+nxt1
+
+[sim_drones:vars]
+ansible_connection=community.docker.docker
+ansible_python_interpreter=python3
+remote_tmp = /tmp/.ansible-${USER}/tmp
 
 [local_drone]
 192.168.55.1 
